Tidied up dependencies, resolved CSS issues with font, spacing and borders

--- a/components/Sidebar/sidebar.css
+++ b/components/Sidebar/sidebar.css
@@ -1,4 +1,17 @@
-.appTitle{
+* {
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  }
+
+  body {
+    padding: 0;
+    margin: 0;
+  }
+  
+
+.Heading{
+    display: flex;
+    align-items: center;
     margin-left: 1.5rem;
     color: white; 
     font-size: 20px;  
@@ -14,9 +27,20 @@
 .menuBars {
     margin-left: 1.5rem;
     font-size: 20px;
-    padding-bottom: 5px;
     color: white;
- 
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+}
+
+.title{
+    margin-top:5px;
+    margin-left: 1.5rem;
+    font-size: 20px;
+    color: white;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
 }
 .menuBars:hover {
     color: white;
@@ -131,6 +155,7 @@
 .caret{
     margin-left:10px;
     font-size: 20px !important;
+    padding-top: 2.5px;
 }
 
   
